--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -406,52 +406,67 @@ body{
 
 .calendarModal {
     position: fixed;
-    width: 50%;
-    height: 50%;
-    left: 25%;
-    top: 25%;
+    left: 20%;
+    top: 20%;
+    right: 20%;
+    bottom: 25%;
+    padding: 20px;
+
+    .hide {
+        display: none;
+    }
 
     display: none;
-    border: solid 5px #525863;
     border-radius: 20px;
-    background: white;
+    border: solid 3px #525863;
+    background-color: rgb(255, 237, 227);
     flex-direction: column;
-    justify-content: center;
-    align-items: center; 
+    box-shadow: 4px 5px 20px;
     .top {
-        h5 {
-            font-size: 50px;        
-        }
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center; 
-        img {
-            margin-left: 20px;
-            width: 40px;
-            height: 40px;
-        }
-    }
-    .entrys {
-        *{
-            margin-left: 10px;
-            margin-right: 10px;
-        }
-        li {
+        right: 0px;
+        margin: 20px 50px 30px 20px;
+        .fullDate {
+            font-family: 'Fredericka the Great', cursive;
+            float: right;
+            padding: 5px;
+            * {
+                margin: 0;
+                padding: 0;
+            }
             display: flex;
-            flex-direction: row;
+            flex-direction: column;
             justify-content: center;
             align-items: center; 
+            .monthNum {
+                font-size: 35px;
+            }
+            .dateNum {
+                font-size: 80px;
+            }
+            .yearNum {
+                font-size: 35px;
+            }
         }
-        button {
-            height: 20px;
+
+        #closeDiaryButton {
+            float:left;
+            border: 5px solid #525863;
+            border-radius: 10px;
+            font-size: 30px;
+            padding: 10px;
+            margin: 10px;
         }
     }
+
     .records {
+        padding: 0;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center; 
+        li {
+            width: 100%;
+        }
     }
 }
 
@@ -460,28 +475,113 @@ body{
 }
 
 .calendar {
-    padding: 10%;
+    padding: 5%;
     .calendarBox {
-        height: 90%;
-        border: solid;
+        height: 95%;
+        border: solid #525863 10px;
+        border-radius: 20px;
         text-align: center;
         width: 98%;
         padding: 5%;
         background-color: rgba(255,187,114,0.9);        
         .monthBar {
-            h2 {
-                font-size: 60px;                    
+            #monthText {
+                font-size: 70px;                    
             }
+            margin-bottom: 20px;
             display: flex;
-            border: solid;
+            border: solid 8px rgb(146, 64, 16);
+            border-radius: 20px;
+            background-color: rgb(202, 129, 86);
             flex-direction: row;
-            justify-content: center;
+            justify-content: space-between;
             align-items: center;  
+
+            button {
+                margin: 10px 20px 10px 20px;
+                width: 100px;
+                height: 100px;
+                border-radius: 50%;
+                border: solid 5px rgb(146, 64, 16);
+                background-color: rgb(245, 187, 153);
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-items: center;  
+                img {
+                    max-width: 60px;
+                }
+            }
         }
         .dateBox {
             background-color: white;
-            border: solid;
-            height: inherit;
+            border: solid 8px #525863;
+            border-radius: 20px;
+            
+            height: 88%;
+
+            .memoModal {
+
+                #closeMemoModal {
+                    border: solid #525863 5px;
+                    padding: 5px;
+                    margin: 5px 5px 20px 5px;
+                    font-size: 35px;
+                    border-radius: 20px;
+                    width: 160px;
+                    height: 80px;
+                }
+
+                position: fixed;
+                background-color: rgba(233, 200, 181, 0.87);
+                border: solid 5px #525863;
+                border-radius: 20px;
+                left: 22%;
+                right: 22%;
+                top: 25%;
+                bottom: 30%;
+
+                display: none;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+
+                #memoTitle {
+                    font-size: 60px;
+                }
+
+                .memoText {
+                    overflow: scroll;
+                    font-size: 40px;
+                    width: 85%;
+                    height: 55%;
+                    margin-bottom: 5%;
+                    border: solid #525863 5px;
+                    padding: 30px;
+                    background-color: rgb(235, 223, 217);
+                }
+                
+                #emotionRateList {
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: center;
+                    align-items: center;
+                    height: 25%;
+
+                    li {
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: center;
+                        align-items: center;
+                        margin: 10px 4px 10px 4px;
+                        img {
+                            width: 65px;
+                            height: 65px;
+                        }
+                    }
+                }
+            }
+
             ul,li {
                 margin: 0px;
                 padding: 0px;
@@ -494,24 +594,37 @@ body{
                 flex:auto;
             }
             .record {
+                width: 80%;
+                font-size: 40px;
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;  
                 border: 3px #76849A solid;
                 background-color: wheat;
                 padding: 5px;
                 border-radius: 12px;
+                p {
+                    margin: 5px;
+                    width: 160px;
+                    border: solid #525863 5px;
+                    border-radius: 20px;
+                    background-color: rgb(204, 212, 226);
+                }
+                img {
+                    width: 60px;
+                    height: 60px;
+                    margin-right: 20px;
+                }
             }
 
-            .recordModal {
-
-            }
-
-            #closeDiaryButton {
-                margin-top: 200px;
-            }
             .weekdays {
                 text-transform: uppercase; 
                 display: flex;
                 flex-direction: row;
                 flex-wrap: wrap;
+                background-color: rgb(90, 36, 4);
+                color:#E9C8B5;
             }
 
             .alldays {
@@ -519,27 +632,21 @@ body{
                 flex-direction: row;
                 flex-wrap: wrap;
                 .date {
-                    font-size: 40px;
+                    background-color: rgb(250, 226, 212);
+                    font-size: 55px;
                     padding: 5px;
                     flex: auto;
                     width: 14%;
-                    height: 18%;
+                    height: 18.55%;
                     margin: 0;
                     padding: 0;
-                    border: solid;
-                    img {
+                    border: solid 2px #525863;
+                    
+                    #emojiOfTheDay {
                         margin-top: 30px;
-                        width: 50px;
-                        height: 50px;
+                        width: 60px;
+                        height: 60px;
                     }
-                }
-
-                .notThisMonth{
-                    background-color: grey;
-                }
-
-                .today {
-                    background-color: grey;
                 }
             }
         }
