--- a/views/setting.handlebars
+++ b/views/setting.handlebars
@@ -43,8 +43,9 @@
 			<img src="../images/Navigation/photoalbum.png">
 		</button>
 		<img src="../images/Navigation/home.png" class="menu" id="homeButton" onclick="window.location='home.handlebars'">
-		<button type="button" class="menu" id="emptyButton" disabled>Market
-			<br>Coming Soon!</button>
+		<button type="button" class="menu" id="marketButton" disabled>
+			<img src="../images/Navigation/market.png">
+		</button>
 		<button type="button" class="menu" id="settingButton" onclick="window.location='setting.handlebars'">
 			<img src="../images/Navigation/settings.png">
 		</button>
