--- a/views/calendar.handlebars
+++ b/views/calendar.handlebars
@@ -7,7 +7,8 @@
 	<link rel="stylesheet" href="../css/bootstrap.min.css">
 	<link rel="stylesheet" href="../css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great" rel="stylesheet">
-	<!--<script src="../js/bootstrap.js"></script>-->
+
+	<script src="../js/jquery-3.3.1.min.js"></script>
 </head>
 
 <body>
@@ -115,8 +116,9 @@
 			<img src="../images/Navigation/photoalbum.png">
 		</button>
 		<img src="../images/Navigation/home.png" class="menu" id="homeButton" onclick="window.location='home.handlebars'">
-		<button type="button" class="menu" id="emptyButton" disabled>Market
-			<br>Coming Soon!</button>
+		<button type="button" class="menu" id="marketButton" disabled>
+			<img src="../images/Navigation/market.png">
+		</button>
 		<button type="button" class="menu" id="settingButton" onclick="window.location='setting.handlebars'">
 			<img src="../images/Navigation/settings.png">
 		</button>
