--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -792,4 +792,34 @@ body{
     display: flex;
     align-content: center;
     justify-content: center;
+    img {
+        width: 100%;
+    }
+
+    button {
+        padding: 20px;
+        position: fixed;
+        font-size: 45px;
+        border: solid 6px #525863;
+        border-radius: 20px;
+        background-color: rgb(252, 193, 159);    
+        font-family: 'Sniglet', cursive;        
+    }
+
+    #skipBtn {
+        background-color: rgba(252, 193, 159, 0.5);    
+        top: 1em;
+        right: 1em;
+    }
+    #prevBtn {
+        left: 1em;
+        bottom: 1em;
+        width: 220px;
+        display: none;
+    }
+    #nextBtn {
+        right: 1em;
+        bottom: 1em;
+        width: 220px;
+    }
 }
