--- a/views/setting.handlebars
+++ b/views/setting.handlebars
@@ -53,4 +53,10 @@
 
 </body>
 
+<script>
+	$("#tutorial").on("click", function() {
+        window.location = "tutorial.handlebars";		
+	})
+</script>
+
 </html>
